--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,5 +3,7 @@
 @import "base/helpers";
 @import "base/general";
 @import "base/flex";
+@import "base/fonts";
 
 @import "components/machine";
+@import "components/button";
