--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,18 +1,3 @@
-/* $primary:   #00E9D7;
-$dark:      #005D56;
-$darkGrey:  #232323;
-$grey:      #555555;
-$lightGrey: #939393;
-$red:       #f44336;
-$green:     #43a047;
-$success:   #4caf50;
-
-$grey-50:   #fafafa;
-$grey-80:   #f7f7f7;
-$grey-100:  #f5f5f5;
-$grey-200:  #eeeeee;
-$grey-300:  #e0e0e0; */
-
 $grey: #607d8b;
 $lightGrey: #90a4ae;
 $darkGrey: #22242f;
@@ -36,7 +21,7 @@ $medium: 768px;
 $large: 992px;
 $extraLarge: 1200px;
 $hd: 1280px;
-$inner: 1416px; // inner width
+$inner: 1416px;
 $xga: 1680px;
 $fhd: 1920px;
 
